--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -11,7 +11,7 @@
 	--secondary-bg: #fff6e1;
 	--light-green: #dbffd5;
 	--light-blue: #f2fffd;
-	--dark-blue: #212a4d;
+	--dark-blue: #141522;
 	--strong-blue: #2e3b6e;
 	--pink: #ff0088;
 	--red: #ff0057;
